--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,18 @@
+
+
 buildscript {
     ext {
         compose_ui_version = '1.1.1'
         lifecycle = '2.5.1'
+        dokka = "1.6.0"
+    }
+    dependencies {
+        classpath "org.jetbrains.dokka:dokka-gradle-plugin:$dokka"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.3.1' apply false
     id 'com.android.library' version '7.3.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'org.jetbrains.dokka' version "$dokka" apply true
 }
