--- a/helper/build.gradle
+++ b/helper/build.gradle
@@ -4,13 +4,14 @@ plugins {
 
 android {
     namespace 'com.usage.access.helper'
-    compileSdk 32
+    compileSdkVersion 30
+    buildToolsVersion '30.0.2'
 
     defaultConfig {
-        minSdk 22
-        targetSdk 32
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        minSdkVersion 22
+        targetSdkVersion 30
+        versionCode 1
+        versionName '1.0'
         consumerProguardFiles "consumer-rules.pro"
     }
 
@@ -27,9 +28,6 @@ android {
 }
 
 dependencies {
-
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.7.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
